# swift-python-environment-creator

./: .gitignore  README.md  create_project_structure.py  main.py  project_settings.py  pyproject.toml  scan_and_install_packages.py  spec.code-workspace
