[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SetupProjEnv_UV"
version = "0.1.0"
description = "Python project created with SPEC (Swift Python Environment Creator)"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--html=reports/report.html --self-contained-html"
